# compiler

./: .gitignore  Cargo.toml  README.md
src/compiler/: lib.rs
src/compiler/ast/: mod.rs  parse.rs
src/compiler/cli/: mod.rs
src/compiler/error/: mod.rs
src/compiler/ir/: instr.rs  mod.rs  value.rs
src/compiler/llvm/: instr.rs  mod.rs  types.rs  value.rs
src/compiler/package/: context.rs
src/compiler/sema/: local.rs  local_ctx.rs  mod.rs  modules.rs  symbols.rs  types.rs  values.rs
src/compiler/sema/package/: context.rs  mod.rs
src/compiler/sema/symbol/: mod.rs  registry.rs
src/compiler/sema/types/: mod.rs  registry.rs
src/compiler/tests/: mod.rs
src/compiler/token/: mod.rs  scan.rs
src/compiler_driver/: a.out  collections.ll  collections.txt  example.c  example.ll  main.rs  test.ll  test.txt  test2.ll  test2.txt  unistd_test.ll  unistd_test.txt
src/driver/: main.rs
tests/: collections.ll  collections.txt  common.rs  example.c  example.ll  general_test.rs  merge_problem.ll  merge_problem.txt  merge_solution.txt  test.ll  test.old.ll  test.txt  test2.ll  test2.txt  test2_redo.txt  test3.ll  test3.txt  test_basics.rs  type_path_problem.ll  type_path_problem.txt  unistd_test.ll  unistd_test.txt
tests/outputs/: hello.ll  test_1.ll  test_2.ll  test_3.ll  test_collections.ll  test_unix.ll
tests/sources/: hello.cupr  hello.main.cupr  libc.cupr  test_1.main.cupr  test_2.cu  test_2.main.cupr  test_3.main.cupr  test_collections.cu  test_collections.main.cupr  test_unix.cu  test_unix.main.cupr  unix.cupr
tests/sources/libc/: ctype.cupr
(+3 files in other folders)
