[package]
name = "compiler"
author = "xarkenz"
version = "0.1.0"
edition = "2021"
default-run = "compiler_driver"

[lib]
name = "compiler"
path = "src/compiler/lib.rs"

[[bin]]
name = "compiler_driver"
path = "src/compiler_driver/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
utf8-chars = "3.0.1"
