[package]
name = "cupric"
version = "0.1.0"
edition = "2021"
description = "A compiler for the Cupric programming language"
readme = "README.md"
default-run = "driver"

[lib]
name = "cupric"
path = "src/compiler/lib.rs"

[[bin]]
name = "driver"
path = "src/driver/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
toml = "0.9.8"
utf8-chars = "3.0.1"
